--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "framer-motion": "^12.26.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.11.0",
